--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,6 @@ src/.vs/config/applicationhost.config
 
 # JetBrains Rider's auto generated files
 .idea/
+
+# all the files inside Data folder which is a subfolder nested somewhere in the project
+**/Data/**
