--- a/src/CatRescueApi/CatRescueApi.csproj
+++ b/src/CatRescueApi/CatRescueApi.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.Validators.UnitTestExtension" Version="1.11.0.2" />
