--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -37,6 +37,10 @@
           }
         },
         "serve": {
+          "options": {
+            "host": "localhost",
+            "port": 4200
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "development": {
