--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/router": "^18.1.0",
-    "@bluehalo/ngx-leaflet": "^19.0.0",
+    "@bluehalo/ngx-leaflet": "^18.0.0",
     "@types/leaflet": "^1.9.16",
     "leaflet": "^1.9.4",
     "rxjs": "^7.8.1",
@@ -26,6 +26,7 @@
     "@angular-devkit/build-angular": "^18.1.0",
     "@angular/cli": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
